--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
-    <title>Echeck - Business Consulting HTML Template</title>
+    <title>Echeck Payment</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -40,25 +40,25 @@
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-                                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">About Us</a>
+                                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                                 <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
                                     <ul>
-                                        <li class="nav-item"><a class="nav-link" href="service-single.html">Service Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="team-single.html">Team Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="clients.html">Clients</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="image-gallery.html">Image Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="video-gallery.html">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Service Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Our Team</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Team Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Pricing Plan</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">404</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                                <li class="nav-item highlighted-menu"><a class="nav-link" href="#">Contact Us</a></li>
                             </ul>
                         </div>
                         <div class="header-btn d-inline-flex">
@@ -341,7 +341,7 @@
     <div class="our-feature-list">
       <div class="our-feature-item wow fadeInUp">
         <div class="icon-box">
-          <i class="fa-solid fa-bolt fa-2x" style="color:#0fa958;"></i>
+          <i class="fa-solid fa-bolt fa-2x" style="color:#e3e7e5;"></i>
         </div>
         <div class="feature-item-content">
           <h3>Make payments faster and easier</h3>
@@ -351,7 +351,7 @@
 
       <div class="our-feature-item wow fadeInUp" data-wow-delay="0.2s">
         <div class="icon-box">
-          <i class="fa-solid fa-circle-check fa-2x" style="color:#0fa958;"></i>
+          <i class="fa-solid fa-circle-check fa-2x" style="color:#e3e7e5;"></i>
         </div>
         <div class="feature-item-content">
           <h3>Simple and powerful</h3>
@@ -361,7 +361,7 @@
 
       <div class="our-feature-item wow fadeInUp" data-wow-delay="0.4s">
         <div class="icon-box">
-          <i class="fa-solid fa-chart-line fa-2x" style="color:#0fa958;"></i>
+          <i class="fa-solid fa-chart-line fa-2x" style="color:#e3e7e5;"></i>
         </div>
         <div class="feature-item-content">
           <h3>In-depth market analysis</h3>
@@ -371,7 +371,7 @@
 
       <div class="our-feature-item wow fadeInUp" data-wow-delay="0.6s">
         <div class="icon-box">
-          <i class="fa-solid fa-scale-balanced fa-2x" style="color:#0fa958;"></i>
+          <i class="fa-solid fa-scale-balanced fa-2x" style="color:#e3e7e5;"></i>
         </div>
         <div class="feature-item-content">
           <h3>Clarity & Confidence</h3>
@@ -381,7 +381,7 @@
 
       <div class="our-feature-item wow fadeInUp" data-wow-delay="0.8s">
         <div class="icon-box">
-          <i class="fa-solid fa-plug fa-2x" style="color:#0fa958;"></i>
+          <i class="fa-solid fa-plug fa-2x" style="color:#e3e7e5;"></i>
         </div>
         <div class="feature-item-content">
           <h3>API Access Available</h3>
@@ -391,7 +391,7 @@
 
       <div class="our-feature-item wow fadeInUp" data-wow-delay="1s">
         <div class="icon-box">
-          <i class="fa-solid fa-briefcase fa-2x" style="color:#0fa958;"></i>
+          <i class="fa-solid fa-briefcase fa-2x" style="color:#e3e7e5;"></i>
         </div>
         <div class="feature-item-content">
           <h3>Business Growth Advisory</h3>
