--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-    <title>Echeck - Business Consulting HTML Template</title>
+    <title>Echeck Payment</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<!-- Google Fonts Css-->
@@ -47,33 +47,23 @@
 	<!-- Preloader End -->
 
     <!-- Header Start -->
+	
 	<header class="main-header">
 		<div class="header-sticky">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
-					<!-- Logo Start -->
-					<a class="navbar-brand" href="index-2.html">
+					<a class="navbar-brand" href="index.html">
 						<img src="images/logo.svg" alt="Logo">
 					</a>
-					<!-- Logo End -->
-
-					<!-- Main Menu Start -->
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item submenu"><a class="nav-link" href="index-2.html">Home</a>
-                                    <ul>
-                                        <li class="nav-item"><a class="nav-link" href="index.html">Home - Main</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-image.html">Home - Image</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-video.html">Home - Video</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-slider.html">Home - Slider</a></li>
-                                    </ul>
-                                </li>                                
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
                                 <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                                 <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
-                                    <ul>                                        
+                                    <ul>
                                         <li class="nav-item"><a class="nav-link" href="service-single.html">Service Details</a></li>
                                         <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
                                         <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
@@ -87,16 +77,13 @@
                                         <li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>                           
+                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
-                        <!-- Header Btn Start -->
                         <div class="header-btn d-inline-flex">
                             <a href="contact.html" class="btn-default btn-highlighted">contact us</a>
                         </div>
-                        <!-- Header Btn End -->
 					</div>
-					<!-- Main Menu End -->
 					<div class="navbar-toggle"></div>
 				</div>
 			</nav>
@@ -115,8 +102,8 @@
                         <h1 class="text-anime-style-2" data-cursor="-opaque">Contact us</h1>
                         <nav class="wow fadeInUp">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index-2.html">home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">contact us</li>
+                                <li class="breadcrumb-item"><a href="index.html">home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">/ contact us</li>
                             </ol>
                         </nav>
                     </div>
@@ -283,133 +270,64 @@
     <!-- Google Map End -->  
 
     <!-- Footer Section Start -->
-    <footer class="main-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <!-- Footer Newsletter Box Start -->
-                    <div class="footer-newsletter-box">
-                        <!-- Footer Newsletter Title Start -->
-                        <div class="footer-newsletter-title">
-                            <h3>Don't missed subscribed!</h3>
-                        </div>
-                        <!-- Footer Newsletter Title End -->
-
-                        <!-- Newsletter Form start -->
-                        <div class="newsletter-form">
-                            <form id="newsletterForm" action="#" method="POST">
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" id="mail" placeholder="Your Email" required="">
-                                    <button type="submit" class="newsletter-btn"><img src="images/arrow-white.svg" alt=""></button>
-                                </div>
-                            </form>
-                        </div>
-                        <!-- Newsletter Form end -->
-                    </div>
-                    <!-- Footer Newsletter Box End -->
-                </div>
-                
-                <div class="col-lg-2 col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>company</h3>
-                        <ul>
-                            <li><a href="index.html">home</a></li>
-                            <li><a href="about.html">about Us</a></li>
-                            <li><a href="services.html">services</a></li>
-                            <li><a href="blog.html">blog</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-2  col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>support</h3>
-                        <ul>
-                            <li><a href="#">help</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Term & Condition</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-2  col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>service</h3>
-                        <ul>
-                            <li><a href="service-single.html">Financial planning</a></li>
-                            <li><a href="service-single.html">Investment management</a></li>
-                            <li><a href="service-single.html">Retirement planning</a></li>
-                            <li><a href="service-single.html">Budgeting & forecasting</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-12">
-                    <!-- About Footer Start -->
-                    <div class="footer-cta-box">
-                        <!-- Footer Logo Start -->
-                        <div class="footer-logo">
-                            <img src="images/footer-logo.svg" alt="">
-                        </div>
-                        <!-- Footer Logo End -->
-                    
-                        <!-- Footer Contact Box Start -->
-                        <div class="footer-contact-box">
-                            <!-- Footer Contact Item Start -->
-                            <div class="footer-contact-item">
-                                <p>Need help!</p>
-                                <h3>+1.809.120.6705</h3>
-                            </div>
-                            <!-- Footer Contact Item End -->
-
-                            <!-- Footer Contact Item Start -->
-                            <div class="footer-contact-item">
-                                <p>E-mail now</p>
-                                <h3>info@domain.com</h3>
-                            </div>
-                            <!-- Footer Contact Item End -->
-                        </div>
-                        <!-- Footer Contact Box End -->
-                    </div>
-                    <!-- About Footer End -->
-                </div>
-            </div>
-
-            <!-- Footer Copyright Section Start -->
-            <div class="footer-copyright">
-                <div class="row align-items-center">
-                    <div class="col-md-5">
-                        <!-- Footer Copyright Start -->
-                        <div class="footer-copyright-text">
-                            <p>Copyright © 2024 All Rights Reserved.</p>
-                        </div>
-                        <!-- Footer Copyright End -->
-                    </div>
-
-                    <div class="col-md-7">
-                        <!-- Footer Menu Start -->
-                        <div class="footer-menu">
-                            <ul>                            
-                                <li><a href="#">LinkedIn</a></li>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Instagram</a></li>
-                                <li><a href="#">Twitter</a></li>
-                            </ul>
-                        </div>
-                        <!-- Footer Menu End -->
-                    </div>
-                </div>
-            </div>
-            <!-- Footer Copyright Section End -->
+   <footer class="main-footer" style="background:#0a0a0a;padding:80px 20px 50px 20px;color:#dcdcdc;">
+  <div class="container">
+    <div class="row" style="align-items:flex-start;">
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-about">
+          <img src="images/footer-logo.svg" alt="Echeck Logo" style="max-width:180px;margin-bottom:15px;">
+          <p style="color:#dcdcdc;line-height:1.6;">
+            eCheckplan provides secure, fast, and reliable eCheck payment processing solutions designed to simplify online transactions for businesses and individuals.
+          </p>
         </div>
-    </footer>
+      </div>
+
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-links">
+          <h3 style="color:#ffffff;margin-bottom:15px;">Services</h3>
+          <ul style="list-style:none;padding:0;margin:0;">
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Incorporation</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing Services</a></li>
+            <li><a href="#" style="color:#dcdcdc;text-decoration:none;">Credit Card Payment Processing Services</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-contact" style="text-align:left;">
+          <h3 style="color:#ffffff;margin-bottom:15px;">Contact & Address</h3>
+          <p style="color:#dcdcdc;">Location: Florida, USA</p>
+          <p style="color:#dcdcdc;">
+            <strong>Phone:</strong> (800) 974-9661<br>
+            <strong>Email:</strong> support@echeckplan.com
+          </p>
+          <div style="margin-top:12px;">
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;text-decoration:none;">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12" style="text-align:center;margin-top:40px;">
+        <p style="color:#dcdcdc;">© 2024 eCheckplan. All Rights Reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
     <!-- Footer Section End -->
 
     <!-- Jquery Library File -->
