2nd time commite

--- a/Referral.html
+++ b/Referral.html
@@ -84,14 +84,14 @@
           <div class="col-lg-12">
             <!-- Page Header Box Start -->
             <div class="page-header-box">
-              <h1 class="text-anime-style-2" data-cursor="-opaque">About us</h1>
+              <h1 class="text-anime-style-2" data-cursor="-opaque">Referral Pragram</h1>
               <nav class="wow fadeInUp">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
                     <a href="index-2.html">home /</a>
                   </li>
                   <li class="breadcrumb-item active" aria-current="page">
-                    about us
+                  Referral 
                   </li>
                 </ol>
               </nav>
@@ -140,14 +140,12 @@
             <div class="about-us-content">
               <!-- Section Title Start -->
               <div class="section-title">
-                <h3 class="wow fadeInUp">About Echeck Payment</h3>
+                <h3 class="wow fadeInUp">About Echeck Referral Program</h3>
                 <h2 class="text-anime-style-2">
-                  Trusted guidance for <span>financial growth</span>
+                  Trusted partnership for <span>mutual growth</span>
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay="0.2s">
-                  Leveraging deep experience in financial technology, we partner
-                  with you to streamline payments, enhance transaction security,
-                  and unlock new opportunities for lasting business success.
+                 Leveraging our expertise in digital payments, we’ve created a referral program that rewards your network and trust. Partner with us to connect new merchants, expand opportunities, and earn ongoing profits while helping businesses access smarter, more secure payment solutions.
                 </p>
               </div>
               <!-- Section Title End -->
@@ -169,19 +167,7 @@
                       data-wow-delay="0.4s"
                     >
                       <p>
-                        Echeck Payment is a next-generation fintech platform
-                        designed to simplify digital transactions and empower
-                        businesses to grow faster. We bring together innovation,
-                        reliability, and security to create seamless payment
-                        experiences that fit your business model perfectly. Our
-                        technology ensures safe, fast, and transparent
-                        transactions — helping you focus on your goals while we
-                        take care of your payment operations. Whether you're a
-                        startup, enterprise, or service provider, Echeck Payment
-                        delivers scalable solutions to support your long-term
-                        success. We believe in continuous improvement and
-                        customer-first innovation — because in the world of
-                        digital finance, trust and performance matter most.
+                       eCheck is committed to delivering reliable services and shared success. Our referral program is designed to help you earn exceptional rewards effortlessly. Simply refer businesses or merchants seeking better payment solutions, and once they join eCheck, you’ll receive a share of the profits we earn each month. Plus, you’ll enjoy exclusive access to our services at specially discounted rates. There’s no limit to how many referrals you can make — the more you refer, the more you earn!
                       </p>
                     </div>
                   </div>
@@ -196,125 +182,14 @@
     </div>
     <!-- About Us Section End -->
 
-    <!-- Our Approach Section Start -->
-    <div class="our-approach">
-      <div class="container">
-        <div class="row section-row align-items-center">
-          <div class="col-lg-6">
-            <!-- Section Title Start -->
-            <div class="section-title">
-              <h3 class="wow fadeInUp">our approach</h3>
-              <h2 class="wow fadeInUp" data-wow-delay="0.2s">
-                Customized strategies for <span>financial success</span>
-              </h2>
-            </div>
-            <!-- Section Title End -->
-          </div>
-          <div class="col-lg-6">
-            <!-- Section Btn Start -->
-            <div class="section-btn wow fadeInUp" data-wow-delay="0.2s">
-              <a href="contact.html" class="btn-default">Contact now</a>
-            </div>
-            <!-- Section Btn Start -->
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <!-- Mission Vision Item Start -->
-            <div class="mission-vission-item wow fadeInUp">
-              <!-- Mission Vision Header Start -->
-              <div class="mission-vission-header">
-                <!-- <div class="icon-box">
-                  <img src="images/icon-our-mission.svg" alt="" />
-                </div> -->
-
-                <div class="mission-vission-content">
-                  <h3>our mission</h3>
-                  <p>
-                   Empowering businesses with secure, innovative, and seamless digital payment solutions. Echeck Payment simplifies financial transactions, drives efficiency, and builds trust — helping you achieve sustainable growth in today’s fast-moving digital economy.
-                  </p>
-                </div>
-              </div>
-              <!-- Mission Vision Header End -->
-
-              <!-- Mission Vision Image Start -->
-              <div class="mission-vission-image">
-                <figure class="image-anime">
-                  <img src="images/our-mission-img.jpg" alt="" />
-                </figure>
-              </div>
-              <!-- Mission Vision Image End -->
-            </div>
-            <!-- Mission Vision Item End -->
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <!-- Mission Vision Item Start -->
-            <div
-              class="mission-vission-item wow fadeInUp"
-              data-wow-delay="0.2s"
-            >
-              <!-- Mission Vision Header Start -->
-              <div class="mission-vission-header">
-                <div class="mission-vission-content">
-                  <h3>our vision</h3>
-                  <p>
-                    Our vision is to revolutionize digital finance by creating a seamless, transparent, and trusted payment ecosystem. We aim to empower every business with technology that simplifies transactions, enhances security, and fuels long-term financial growth.
-                  </p>
-                </div>
-              </div>
-              <!-- Mission Vision Header End -->
-
-              <!-- Mission Vision Image Start -->
-              <div class="mission-vission-image">
-                <figure class="image-anime">
-                  <img src="images/our-vision-img.jpg" alt="" />
-                </figure>
-              </div>
-              <!-- Mission Vision Image End -->
-            </div>
-            <!-- Mission Vision Item End -->
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <!-- Mission Vision Item Start -->
-            <div
-              class="mission-vission-item wow fadeInUp"
-              data-wow-delay="0.4s"
-            >
-              <!-- Mission Vision Header Start -->
-              <div class="mission-vission-header">
-                <!-- <div class="icon-box">
-                  <img src="images/icon-our-value.svg" alt="" />
-                </div> -->
-
-                <div class="mission-vission-content">
-                  <h3>our value</h3>
-                  <p>
-                    Our values are built on trust, innovation, and integrity. We prioritize transparency, customer success, and reliability in every transaction—driving progress through technology, ethical practices, and a commitment to empowering businesses globally.
-                  </p>
-                </div>
-              </div>
-              <!-- Mission Vision Header End -->
-
-              <!-- Mission Vision Image Start -->
-              <div class="mission-vission-image">
-                <figure class="image-anime">
-                  <img src="images/our-value-img.jpg" alt="" />
-                </figure>
-              </div>
-              <!-- Mission Vision Image End -->
-            </div>
-            <!-- Mission Vision Item End -->
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Our Approach Section End -->
-
-    <!-- Why Choose Us Section Start -->
    
+    <div class="our-pricing" style="background:#0fa958;margin:15px;padding:80px 20px;text-align:center;color:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.15);">
+  <div class="container">
+    <h2 style="font-size:38px;font-weight:700;margin-bottom:15px;">Start Your <span style="color:#fff;">Referral Journey</span> Today</h2>
+    <p style="font-size:17px;margin-bottom:25px;">Our referral program is built to create mutual growth and shared success. By connecting new businesses to eCheck, you earn exciting rewards while helping us expand our network. It’s a simple, transparent, and rewarding way for both sides to grow together.</p>
+    <a href="contact.html" style="background:#fff;color:#0fa958;padding:10px 28px;border-radius:30px;font-weight:600;text-decoration:none;display:inline-block;transition:all .3s;">Get Started Now</a>
+  </div>
+</div>
     <div class="our-feature">
         <div class="container">
             <div class="row section-row align-items-center">
