--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<!-- Mirrored from html.awaikenthemes.com/Echeck/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Oct 2025 04:30:26 GMT -->
+
 <head>
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -48,33 +48,33 @@
 
     <!-- Header Start -->
 	
-	<header class="main-header">
+<header class="main-header">
 		<div class="header-sticky">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.svg" alt="Logo">
+						<img src="logo/logo.png" alt="Logo">
 					</a>
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-                                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
+                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
                                 <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
                                     <ul>
-                                        <li class="nav-item"><a class="nav-link" href="service-single.html">Service Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="team-single.html">Team Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="clients.html">Clients</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="image-gallery.html">Image Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="video-gallery.html">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Service Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Our Team</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Team Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Pricing Plan</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">404</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
@@ -132,8 +132,7 @@
                             </div>
                             <div class="contact-info-content">
                                 <h3>call us any time!</h3>
-                                <p>+91 - 123 456 789</p>
-                                <p>+(91)- 178 456 129</p>
+                                <p>(800) 974-9661
                             </div>
                         </div>
                     </div>
@@ -154,8 +153,7 @@
                             </div>
                             <div class="contact-info-content">
                                 <h3>send us e-mail</h3>
-                                <p>sales@domainname.com</p>
-                                <p>info@domainname.com</p>
+                                <p>support@echeckplan.com</p>
                             </div>
                         </div>
                     </div>
@@ -175,8 +173,8 @@
                                 <img src="images/icon-location.svg" alt="">
                             </div>
                             <div class="contact-info-content">
-                                <h3>finance office address</h3>
-                                <p>123 High Street London WC1A 1AA United Kingdom</p>
+                                <h3>Office address</h3>
+                                <p>Location: Florida, USA</p>
                             </div>
                         </div>
                     </div>
