--- a/faqs.html
+++ b/faqs.html
@@ -47,56 +47,42 @@
 	<!-- Preloader End -->
 
     <!-- Header Start -->
-	<header class="main-header">
+<header class="main-header">
 		<div class="header-sticky">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
-					<!-- Logo Start -->
-					<a class="navbar-brand" href="index-2.html">
-						<img src="images/logo.svg" alt="Logo">
+					<a class="navbar-brand" href="index.html">
+						<img src="logo/logo.png" alt="Logo">
 					</a>
-					<!-- Logo End -->
-
-					<!-- Main Menu Start -->
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item submenu"><a class="nav-link" href="index-2.html">Home</a>
-                                    <ul>
-                                        <li class="nav-item"><a class="nav-link" href="index.html">Home - Main</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-image.html">Home - Image</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-video.html">Home - Video</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-slider.html">Home - Slider</a></li>
-                                    </ul>
-                                </li>                                
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-                                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
+                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
                                 <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
-                                    <ul>                                        
-                                        <li class="nav-item"><a class="nav-link" href="service-single.html">Service Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="team-single.html">Team Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="clients.html">Clients</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="image-gallery.html">Image Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="video-gallery.html">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
+                                    <ul>
+                                        <li class="nav-item"><a class="nav-link" href="#">Service Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Our Team</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Team Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Pricing Plan</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">404</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>                           
+                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
-                        <!-- Header Btn Start -->
                         <div class="header-btn d-inline-flex">
                             <a href="contact.html" class="btn-default btn-highlighted">contact us</a>
                         </div>
-                        <!-- Header Btn End -->
 					</div>
-					<!-- Main Menu End -->
 					<div class="navbar-toggle"></div>
 				</div>
 			</nav>
@@ -149,7 +135,7 @@
                         <div class="sidebar-cta-box wow fadeInUp" data-wow-delay="0.25s">
                             <!-- CTA Contact Content Start -->
                             <div class="cta-box-content">
-                                <img src="images/logo.svg" alt="">
+                                <img src="logo/logo.png" alt="">
                                 <h3>Need Help? We Are Here To Help You</h3>
                             </div>
                             <!-- CTA Contact Content End -->
@@ -159,14 +145,15 @@
                                 <!-- CTA Info Item Start -->
                                 <div class="cta-info-item">
                                     <p>Need help!</p>
-                                    <h3>+91 - 1123 456 7890</h3>
+                                    <h3>+91 - 123 456 789</h3>
+                                    <h3>+(91)- 178 456 129</h3>
                                 </div>
                                 <!-- CTA Info Item End -->
 
                                 <!-- CTA Info Item Start -->
                                 <div class="cta-info-item">
                                     <p>E-mail now</p>
-                                    <h3>info@domainname.com</h3>
+                                     <p>info@domainname.com</p>
                                 </div>
                                 <!-- CTA Info Item End -->
                             </div>
@@ -480,135 +467,72 @@
         </div>
     </div>
     <!-- Page Faqs End -->
-
+ <div class="our-pricing" style="background:#0fa958;margin:15px;padding:80px 20px;text-align:center;color:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.15);">
+  <div class="container">
+    <h2 style="font-size:38px;font-weight:700;margin-bottom:15px;">Open Your <span style="color:#fff;">E-Check Account</span> Instantly</h2>
+    <p style="font-size:17px;margin-bottom:25px;">Create your Echeck Payment account in minutes and start accepting secure digital payments effortlessly.</p>
+    <a href="contact.html" style="background:#fff;color:#0fa958;padding:10px 28px;border-radius:30px;font-weight:600;text-decoration:none;display:inline-block;transition:all .3s;">Get Started Now</a>
+  </div>
+</div>
     <!-- Footer Section Start -->
-    <footer class="main-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <!-- Footer Newsletter Box Start -->
-                    <div class="footer-newsletter-box">
-                        <!-- Footer Newsletter Title Start -->
-                        <div class="footer-newsletter-title">
-                            <h3>Don't missed subscribed!</h3>
-                        </div>
-                        <!-- Footer Newsletter Title End -->
-
-                        <!-- Newsletter Form start -->
-                        <div class="newsletter-form">
-                            <form id="newsletterForm" action="#" method="POST">
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" id="mail" placeholder="Your Email" required="">
-                                    <button type="submit" class="newsletter-btn"><img src="images/arrow-white.svg" alt=""></button>
-                                </div>
-                            </form>
-                        </div>
-                        <!-- Newsletter Form end -->
-                    </div>
-                    <!-- Footer Newsletter Box End -->
-                </div>
-                
-                <div class="col-lg-2 col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>company</h3>
-                        <ul>
-                            <li><a href="index.html">home</a></li>
-                            <li><a href="about.html">about Us</a></li>
-                            <li><a href="services.html">services</a></li>
-                            <li><a href="blog.html">blog</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-2  col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>support</h3>
-                        <ul>
-                            <li><a href="#">help</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Term & Condition</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-2  col-md-4">
-                    <!-- Footer Links Start -->
-                    <div class="footer-links">
-                        <h3>service</h3>
-                        <ul>
-                            <li><a href="service-single.html">Financial planning</a></li>
-                            <li><a href="service-single.html">Investment management</a></li>
-                            <li><a href="service-single.html">Retirement planning</a></li>
-                            <li><a href="service-single.html">Budgeting & forecasting</a></li>
-                        </ul>
-                    </div>
-                    <!-- Footer Links End -->
-                </div>
-
-                <div class="col-lg-12">
-                    <!-- About Footer Start -->
-                    <div class="footer-cta-box">
-                        <!-- Footer Logo Start -->
-                        <div class="footer-logo">
-                            <img src="images/footer-logo.svg" alt="">
-                        </div>
-                        <!-- Footer Logo End -->
-                    
-                        <!-- Footer Contact Box Start -->
-                        <div class="footer-contact-box">
-                            <!-- Footer Contact Item Start -->
-                            <div class="footer-contact-item">
-                                <p>Need help!</p>
-                                <h3>+1.809.120.6705</h3>
-                            </div>
-                            <!-- Footer Contact Item End -->
-
-                            <!-- Footer Contact Item Start -->
-                            <div class="footer-contact-item">
-                                <p>E-mail now</p>
-                                <h3>info@domain.com</h3>
-                            </div>
-                            <!-- Footer Contact Item End -->
-                        </div>
-                        <!-- Footer Contact Box End -->
-                    </div>
-                    <!-- About Footer End -->
-                </div>
-            </div>
-
-            <!-- Footer Copyright Section Start -->
-            <div class="footer-copyright">
-                <div class="row align-items-center">
-                    <div class="col-md-5">
-                        <!-- Footer Copyright Start -->
-                        <div class="footer-copyright-text">
-                            <p>Copyright © 2024 All Rights Reserved.</p>
-                        </div>
-                        <!-- Footer Copyright End -->
-                    </div>
-
-                    <div class="col-md-7">
-                        <!-- Footer Menu Start -->
-                        <div class="footer-menu">
-                            <ul>                            
-                                <li><a href="#">LinkedIn</a></li>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Instagram</a></li>
-                                <li><a href="#">Twitter</a></li>
-                            </ul>
-                        </div>
-                        <!-- Footer Menu End -->
-                    </div>
-                </div>
-            </div>
-            <!-- Footer Copyright Section End -->
+  <footer class="main-footer" style="background:#0a0a0a;padding:80px 20px 50px 20px;color:#dcdcdc;">
+  <div class="container">
+    <div class="row" style="align-items:flex-start;">
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-about">
+          <img src="images/footer-logo.svg" alt="Echeck Logo" style="max-width:180px;margin-bottom:15px;">
+          <p style="color:#dcdcdc;line-height:1.6;">
+            eCheckplan provides secure, fast, and reliable eCheck payment processing solutions designed to simplify online transactions for businesses and individuals.
+          </p>
         </div>
-    </footer>
+      </div>
+
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-links">
+          <h3 style="color:#ffffff;margin-bottom:15px;">Services</h3>
+          <ul style="list-style:none;padding:0;margin:0;">
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Incorporation</a></li>
+            <li style="margin-bottom:8px;"><a href="#" style="color:#dcdcdc;text-decoration:none;">Echeck Payment Processing Services</a></li>
+            <li><a href="#" style="color:#dcdcdc;text-decoration:none;">Credit Card Payment Processing Services</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6" style="margin-bottom:30px;">
+        <div class="footer-contact" style="text-align:left;">
+          <h3 style="color:#ffffff;margin-bottom:15px;">Contact & Address</h3>
+          <p style="color:#dcdcdc;">Location: Florida, USA</p>
+          <p style="color:#dcdcdc;">
+            <strong>Phone:</strong> (800) 974-9661<br>
+            <strong>Email:</strong> support@echeckplan.com
+          </p>
+          <div style="margin-top:12px;">
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;margin-right:12px;text-decoration:none;">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" style="color:#ffffff;font-size:20px;text-decoration:none;">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12" style="text-align:center;margin-top:40px;">
+        <p style="color:#dcdcdc;">© 2024 eCheckplan. All Rights Reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
     <!-- Footer Section End -->
 
     <!-- Jquery Library File -->
