--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
     <title>Echeck Payment</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="images/Echeckfevicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;display=swap" rel="stylesheet">
@@ -29,20 +29,21 @@
 		</div>
 	</div>
 
-	<header class="main-header">
+<header class="main-header">
 		<div class="header-sticky">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.svg" alt="Logo">
+						<img src="logo/logo.png" alt="Logo">
 					</a>
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">About Us</a>
+                                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
                                 <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="Referral.html">Refrral</a></li>
+                               <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
                                 <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
                                     <ul>
                                         <li class="nav-item"><a class="nav-link" href="#">Service Details</a></li>
@@ -54,11 +55,10 @@
                                         <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
                                         <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
                                         <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
                                         <li class="nav-item"><a class="nav-link" href="#">404</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="#">Contact Us</a></li>
+                                <li class="nav-item highlighted-menu"><a class="nav-link" href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
                         <div class="header-btn d-inline-flex">
@@ -137,60 +137,61 @@
                 </div>
                 
                 <div class="col-lg-6">
-                    <div class="about-us-content">
-                        <div class="section-title">
-                            <h3 class="wow fadeInUp">About Echeck Payemnet</h3>
-                            <h2 class="text-anime-style-2" data-cursor="-opaque">Your partner in <span>payment excellence</span></h2>
-                            <p class="wow fadeInUp" data-wow-delay="0.2s">Leveraging deep experience in financial technology, we partner with you to streamline payments, enhance transaction security, and unlock new opportunities for lasting business success.</p>
-                        </div>
-                        <div class="about-content-body">
-                            <div class="row align-items-center">
-                                <div class="col-md-6">
-                                    <div class="about-content-info">
-                                        <div class="about-goal-box wow fadeInUp" data-wow-delay="0.4s">
-                                            <div class="icon-box">
-                                                <img src="images/icon-financial-strategies.svg" alt="">
-                                            </div>
-                                            <div class="about-goal-box-content">
-                                                <h3>Future-Ready Payment Systems</h3>
-                                                <p>Empowering businesses with secure, scalable, and innovative payment technology built to adapt, automate, and accelerate transactions in the ever-evolving digital future.</p>
-                                            </div>
-                                        </div>
-                                        <div class="about-contact-box wow fadeInUp" data-wow-delay="0.6s">
-                                            <div class="icon-box">
-                                                <img src="images/icon-phone.svg" alt="">
-                                            </div>
-                                            <div class="about-contact-content">
-                                                <p><a href="tel:658456975">(800) 974-9661</a></p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+            <!-- About Us Content Start -->
+            <div class="about-us-content">
+              <!-- Section Title Start -->
+              <div class="section-title">
+                <h3 class="wow fadeInUp">About Echeck Payment</h3>
+                <h2 class="text-anime-style-2">
+                  Trusted guidance for <span>financial growth</span>
+                </h2>
+                <p class="wow fadeInUp" data-wow-delay="0.2s">
+                  Leveraging deep experience in financial technology, we partner
+                  with you to streamline payments, enhance transaction security,
+                  and unlock new opportunities for lasting business success.
+                </p>
+              </div>
+              <!-- Section Title End -->
 
-                                <div class="col-md-6">
-                                    <div class="about-author-box wow fadeInUp" data-wow-delay="0.4s">
-                                        <div class="about-info-box">
-                                            <figure class="image-anime reveal">
-                                                <img src="images/author-1.jpg" alt="">
-                                            </figure>
-                                            <div class="about-author-content">
-                                                <h3 class="text-success">Echeck</h3>
-                                                <p>New Era Digital Payment</p>
-                                            </div>
-                                        </div>
-                                        <div class="about-info-list">
-                                            <ul>
-                                                <li>Trust & Protection</li>
-                                                <li>Digital Connectivity</li>
-                                                <li>24/7 support</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+              <!-- About Content Body Start -->
+              <div class="about-content-body">
+                <div class="row align-items-center">
+                  <!-- Left Column: Image Only -->
+                  <!-- <div class="col-md-6 text-center wow fadeInUp" data-wow-delay="0.3s">
+                    <figure class="image-anime reveal">
+                        <img src="images/about-echeck.jpg" alt="About Echeck Payment" class="img-fluid rounded shadow-lg">
+                    </figure>
+                </div> -->
+
+                  <!-- Right Column: Continuous Content -->
+                  <div class="col-md-12">
+                    <div
+                      class="about-content-info wow fadeInUp"
+                      data-wow-delay="0.4s"
+                    >
+                      <p>
+                        Echeck Payment is a next-generation fintech platform
+                        designed to simplify digital transactions and empower
+                        businesses to grow faster. We bring together innovation,
+                        reliability, and security to create seamless payment
+                        experiences that fit your business model perfectly. Our
+                        technology ensures safe, fast, and transparent
+                        transactions — helping you focus on your goals while we
+                        take care of your payment operations. Whether you're a
+                        startup, enterprise, or service provider, Echeck Payment
+                        delivers scalable solutions to support your long-term
+                        success. We believe in continuous improvement and
+                        customer-first innovation — because in the world of
+                        digital finance, trust and performance matter most.
+                      </p>
                     </div>
+                  </div>
                 </div>
+              </div>
+              <!-- About Content Body End -->
+            </div>
+            <!-- About Us Content End -->
+          </div>
             </div>
         </div>
     </div>
